--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^1.0.3",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18.2.0",
